--- a/main_app/templates/password_reset_invalid.html
+++ b/main_app/templates/password_reset_invalid.html
@@ -12,7 +12,7 @@
         <div class="col-md-6 offset-md-3">
             <h1 class="text-center">Invalid Password Reset Link</h1>
             <p class="text-center">The password reset link you followed is invalid or has expired.</p>
-            <a class="btn btn-primary btn-block mt-3" href="{{ login_url }}">Request Another Link</a>
+<!--            <a class="btn btn-primary btn-block mt-3" href="{{ login_url }}">Request Another Link</a>-->
         </div>
     </div>
 </div>
